# godaddy_dynamic_dns

./: .gitignore  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  entrypoint.sh  godaddy_dyna_dns.py  pyproject.toml
godaddy_dynamic_dns/: __init__.py  dynamic_dns_updater.py  service.py
